Bug 790855, part 1: nsIMimeConverter needs to return AUTF8String instead of ACString, r=Neil